ECO-1139 : Inconsistent UI in Fullscreen mode after adding table - Modified code to avoid overflow of table outside the modal view in fullscreen - Modified code to set the minimum height for table when not in fullscreen to avoid extending i-frame - Modified toolbar width to occupy available space if table has more number of columns.

--- a/src/pages/FieldExtension/styles.scss
+++ b/src/pages/FieldExtension/styles.scss
@@ -1,8 +1,10 @@
 //.app {
 .field-extension {
   width: 100%;
+  overflow: auto;
   .field-extension-wrapper {
     padding: 14px 10px;
+    height: inherit;
 
     .search-wrapper {
       border: 1px solid #f5f5f5;
@@ -141,7 +143,7 @@
     .table {
       border: 1px solid #f5f5f5;
       border-radius: 8px 8px 0px 0px;
-      min-width: 454px !important;
+      width: fit-content;
 
       .table-data {
         &.highlight-table {
@@ -231,7 +233,13 @@
     }
   }
 }
-//}
+.table-height {
+  height: 450px;
+}
+
+.app-height {
+  height: inherit;
+}
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');
 html {
@@ -631,6 +639,7 @@ input[type='file']::file-selector-button:hover {
 
 .fullscreen {
   display: flex;
+  height: 96%;
   .layout-container {
     width: 100%;
     display: flex;
@@ -642,4 +651,12 @@ input[type='file']::file-selector-button:hover {
       margin: 2px;
     }
   }
+}
+
+.table-min-width {
+  min-width: 768px !important;
+}
+
+.fs-table-min-width {
+  min-width: 1670px !important;
 }
